# Stable-Motion-Primitives-via-Imitation-and-Contrastive-Learning

./: LICENSE  README.md  pyproject.toml
src/: initializer.py  run_optuna.py  simulate_ds.py  train.py
src/agent/: contrastive_imitation.py  dynamical_system.py  neural_network.py
src/agent/utils/: dynamical_system_operations.py  ranking_losses.py
src/data_preprocessing/: data_loader.py  data_preprocessor.py
src/datasets/: dataset_keys.py
src/datasets/LAIR/G_angle/: G_angle_0.npy  G_angle_1.npy  G_angle_10.npy  G_angle_11.npy  G_angle_12.npy  G_angle_13.npy  G_angle_2.npy  G_angle_3.npy  G_angle_4.npy  G_angle_5.npy  G_angle_6.npy  G_angle_7.npy  G_angle_8.npy  G_angle_9.npy
src/datasets/LAIR/Lag/: Lag_0.npy  Lag_1.npy  Lag_2.npy  Lag_3.npy  Lag_4.npy  Lag_5.npy  Lag_6.npy
src/datasets/LAIR/capricorn/: capricorn_0.npy  capricorn_1.npy  capricorn_2.npy  capricorn_3.npy  capricorn_4.npy  capricorn_5.npy  capricorn_6.npy
src/datasets/LAIR/double_lag/: double_lag_0.npy  double_lag_1.npy  double_lag_2.npy  double_lag_3.npy  (+3 more)
src/evaluation/: evaluate.py  evaluate_2d_o1.py  evaluate_2d_o2.py  evaluate_3d.py  evaluate_nd.py  evaluator_init.py
src/evaluation/utils/: saving.py  similarity_measures.py
src/hyperparam_optimization/: create_optuna_study.py  optuna_functions.py  visualize_hyperparameter_optimization.py
src/params/: 1st_order_2D.py  1st_order_2D_fixed_gains.py  1st_order_2D_triplet.py  1st_order_3D.py  1st_order_joint_space.py  1st_order_multi.py  2nd_order_2D.py  behavioral_cloning.py
src/tools/: animation.py  draw_mouse.py  plot_3D.py  tsne.py
(+89 files in other folders)
